# nlp-intelligence-system

./: .gitignore  README.md  main.py  pyproject.toml
.dvc/: config
src/features/: vectorizer.py
src/preprocessing/: text_cleaner.py
tests/: test_text_cleaner.py  test_vectorizer.py
