[project]
name = "nlp-intelligence-system"
version = "0.1.0"
description = "NLP sentiment classifier and search engine with MLOps"
requires-python = ">=3.11"

dependencies = [
    "nltk>=3.8.1",
    "scikit-learn>=1.4.0",
    "rank-bm25>=0.2.2",
    "gensim>=4.3.2",
    "mlflow>=2.11.0",
    "dvc>=3.47.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]